# clevr-dataset-gen

./: CLAUDE.md  CLEVR数据集生成工具完整报告.md  PROJECT_STATUS.md  README.md  pyproject.toml
docs/: PHASE1_PLAN.md
image_generation/: README.md  create_materials_blender5.py  create_shapes_blender5.py  render_images.py  render_multiview.py  utils.py
image_generation/tests/: test_multiview_config.py
ordinal_spatial/: CHINESE_COMMENTS_SUMMARY.md  CLAUDE.md  DEPLOY_SERVER_CN.md  IMPLEMENTATION_SUMMARY_CN.md  QUICKSTART_CN.md  README.md  __init__.py  example_usage.py  requirements.txt  中文DOCSTRING指南.md  中文DOCSTRING进展.md  中文注释完成报告.md  完成情况总结.md  英文注释清单.md
ordinal_spatial/agents/: __init__.py  base.py  blender_constraint_agent.py  cli.py  vlm_constraint_agent.py
ordinal_spatial/baselines/: __init__.py  embedding.py  hybrid.py  oracle.py  vlm_direct.py
ordinal_spatial/dsl/: __init__.py  comparators.py  predicates.py  schema.py
ordinal_spatial/evaluation/: __init__.py  consistency.py  constraint_diff.py  metrics.py
ordinal_spatial/generation/: __init__.py  constraint_extractor.py  degeneracy_checker.py  difficulty_control.py
ordinal_spatial/image_generation/: README_BLENDER5.md  create_base_scene_blender5.py  create_materials_blender5.py  render_multiview.py  setup_blender5.sh
ordinal_spatial/prompts/: __init__.py  system_prompts.py  task_prompts.py
ordinal_spatial/scripts/: __init__.py  (+11 more)
question_generation/: question_engine.py
scripts/: DATASET_SPLITS.md  README.md  build_8gpu.py  diagnose_blender_import.py  fix_blender_import_linux.sh  generate.sh  generate_1gpu.sh
(+35 files in other folders)
