[project]
name = "clevr-dataset-gen"
version = "0.1.0"
description = "CLEVR dataset generation and ORDINAL-SPATIAL spatial reasoning benchmark"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}

dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "Pillow>=9.0.0",
  "jsonschema>=4.0.0",
  "pydantic>=2.0.0",
  "networkx>=2.6.0",
  "openai>=1.0.0",
  "httpx[socks]>=0.24.0",
  "matplotlib>=3.5.0",
]

[project.optional-dependencies]
ml = [
  "torch>=2.0.0",
]
tokenizer = [
  "tiktoken>=0.5.0",
  "transformers>=4.30.0",
]
viz = [
  "seaborn>=0.12.0",
  "plotly>=5.0.0",
]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]
dev = [
  "clevr-dataset-gen[ml,tokenizer,viz,test]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ordinal_spatial", "image_generation", "question_generation"]

[tool.pytest.ini_options]
testpaths = ["ordinal_spatial/tests", "ordinal_spatial/agents/tests"]
